--- a/siar_app/templates/base.html
+++ b/siar_app/templates/base.html
@@ -207,6 +207,7 @@
     </footer>
 
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/estado.js') }}"></script>
 
     {% block page_scripts %}
     {% endblock %}
