--- a/siar_app/templates/base.html
+++ b/siar_app/templates/base.html
@@ -153,7 +153,7 @@
                     <h4 class="font-semibold text-white mb-4">Soporte</h4>
                     <ul class="space-y-2">
                         <li><a href="#" class="text-gray-300 hover:text-white text-sm transition-colors">Centro de Ayuda</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm transition-colors">Manual de Usuario</a></li>
+                        <li><a href="{{ url_for('static', filename='manuales/Manual_SIAR.pdf') }}" target="_blank" class="text-gray-300 hover:text-white text-sm transition-colors">Manual de Usuario</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-white text-sm transition-colors">Contacto Técnico</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-white text-sm transition-colors">Mantenimiento</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-white text-sm transition-colors">Garantía</a></li>
